k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    #After get the CERT
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

spec:
  # AFTER GET the CERT
  tls:
    - hosts:
        - k8s.tin.gg
        # - www.domain.com
      secretName: k8s-tin-gg
  #END CERT
  rules:
    - host: k8s.tin.gg
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    # second domain
    # - host: k8s.tin.gg
    #   http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: client-cluster-ip-service
    #           servicePort: 3000
    #       - path: /api/
    #         backend:
    #           serviceName: server-cluster-ip-service
    #           servicePort: 5000
